log
Tue 02 May 2023 11:04:59 PM UTC: 
 tests:  0|5
total_score: 0/70
298ec88
Thu 04 May 2023 04:42:29 PM UTC: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
sudoku.c:66:7: error: redefinition of ‘get_adj_nodes’
   66 | List* get_adj_nodes(Node* n){
      |       ^~~~~~~~~~~~~
sudoku.c:52:7: note: previous definition of ‘get_adj_nodes’ with type ‘List *(Node *)’
   52 | List* get_adj_nodes(Node* n){
      |       ^~~~~~~~~~~~~
Compilation failed
442cc85
Thu 04 May 2023 04:42:47 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c:67:7: error: redefinition of ‘get_adj_nodes’
   67 | List* get_adj_nodes(Node* n){
      |       ^~~~~~~~~~~~~
sudoku.c:52:7: note: previous definition of ‘get_adj_nodes’ with type ‘List *(Node *)’
   52 | List* get_adj_nodes(Node* n){
      |       ^~~~~~~~~~~~~
sudoku.c:73:1: error: expected identifier or ‘(’ before ‘}’ token
   73 | }
      | ^
Compilation failed
f80040e
Thu 04 May 2023 04:42:56 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
sudoku.c:67:7: error: redefinition of ‘get_adj_nodes’
   67 | List* get_adj_nodes(Node* n){
      |       ^~~~~~~~~~~~~
sudoku.c:52:7: note: previous definition of ‘get_adj_nodes’ with type ‘List *(Node *)’
   52 | List* get_adj_nodes(Node* n){
      |       ^~~~~~~~~~~~~
Compilation failed
2104878
